# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("mosquitto_config") {
  cflags = [
    "-DVERSION=\"2.0.18\"",
    "-DWITH_UNIX_SOCKETS",
    "-DWITH_SOCKS",
  ]
}

ohos_executable("mosquitto_pub") {

  sources = [
    "pub_client.c", 
    "pub_shared.c",
    "client_shared.c", 
    "client_props.c"
  ]

  include_dirs = [
    "//third_party/mosquitto",
    "//third_party/mosquitto/include",
    "//third_party/mosquitto/client"
  ]

  deps = [
    "//third_party/mosquitto/lib:libmosquitto"
  ]

  configs = [":mosquitto_config"]

  license_file = "//third_party/mosquitto/LICENSE.txt"

  install_enable = true

  part_name = "mosquitto"
  subsystem_name = "thirdparty"
}

ohos_executable("mosquitto_sub") {

  sources = [
    "sub_client.c", 
    "sub_client_output.c",
    "client_shared.c", 
    "client_props.c"
  ]

  include_dirs = [
    "//third_party/mosquitto",
    "//third_party/mosquitto/include",
    "//third_party/mosquitto/client"
  ]

  deps = [
    "//third_party/mosquitto/lib:libmosquitto"
  ]

  configs = [":mosquitto_config"]

  license_file = "//third_party/mosquitto/LICENSE.txt"

  install_enable = true

  part_name = "mosquitto"
  subsystem_name = "thirdparty"
}

group("mosquitto_clients") {
  deps = [
    ":mosquitto_pub",
    ":mosquitto_sub"
  ]
}
