# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libmosquitto") {
  # Assuming WITH_LIB_CPP is handled elsewhere in GN to conditionally include cpp directory.
  sources = [
    "actions.c",
    "callbacks.c",
    "connect.c",
    "handle_auth.c",
    "handle_connack.c",
    "handle_disconnect.c",
    "handle_ping.c",
    "handle_pubackcomp.c",
    "handle_publish.c",
    "handle_pubrec.c",
    "handle_pubrel.c",
    "handle_suback.c",
    "handle_unsuback.c",
    "helpers.c",
    "logging_mosq.c",
    "logging_mosq.h",
    "loop.c",
    "memory_mosq.c",
    "memory_mosq.h",
    "messages_mosq.c",
    "messages_mosq.h",
    "misc_mosq.c",
    "misc_mosq.h",
    "mosquitto.c",
    "../include/mosquitto.h",
    "mosquitto_internal.h",
    "../include/mqtt_protocol.h",
    "net_mosq_ocsp.c",
    "net_mosq.c",
    "net_mosq.h",
    "options.c",
    "packet_datatypes.c",
    "packet_mosq.c",
    "packet_mosq.h",
    "property_mosq.c",
    "property_mosq.h",
    "read_handle.c",
    "read_handle.h",
    "send_connect.c",
    "send_disconnect.c",
    "send_mosq.c",
    "send_publish.c",
    "send_subscribe.c",
    "send_unsubscribe.c",
    "send_mosq.h",
    "socks_mosq.c",
    "srv_mosq.c",
    "strings_mosq.c",
    "thread_mosq.c",
    "time_mosq.c",
    "tls_mosq.c",
    "utf8_mosq.c",
    "util_mosq.c",
    "util_topic.c",
    "util_mosq.h",
    "will_mosq.c",
    "will_mosq.h",
  ]

  include_dirs = [
    "//third_party/mosquitto",
    "//third_party/mosquitto/include",
    "//third_party/mosquitto/lib",
    "//third_party/mosquitto/deps",
  ]

  ldflags = [
    # Assuming OPENSSL_LIBRARIES and PTHREAD_LIBRARIES are defined elsewhere.
    # Add "-lrt" on UNIX but not APPLE or ANDROID.
    # Add "ws2_32" on WIN32.
    # Conditionally add "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/linker.version"
  ]

  deps = [
    # Dependencies within the project.
  ]

  external_deps = [
    # Assuming external dependencies are handled elsewhere or converted appropriately.
  ]

  part_name = "mosquitto"
  subsystem_name = "thirdparty"

  # Define module_install_dir, relative_install_dir, and install_images as needed.
}
