# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("mosquitto_config") {
  cflags = [
    "-DVERSION=\"2.0.18\"",
    "-DWITH_MEMORY_TRACKING",
    "-DWITH_PERSISTENCE",
    "-DWITH_SYS_TREE",
    "-DWITH_CONTROL",
    "-DWITH_BROKER",
    "-DWITH_UNIX_SOCKETS",
    "-DWITH_SOCKS",
  ]
}

ohos_source_set("mosquitto_src") {
  sources = [
    "../lib/alias_mosq.c",
    "bridge.c",
    "bridge_topic.c",
    "conf.c",
    "conf_includedir.c",
    "context.c",
    "control.c",
    "database.c",
    "handle_auth.c",
    "handle_connack.c",
    "handle_connect.c",
    "handle_disconnect.c",
    "../lib/handle_ping.c",
    "../lib/handle_pubackcomp.c",
    "handle_publish.c",
    "../lib/handle_pubrec.c",
    "../lib/handle_pubrel.c",
    "../lib/handle_suback.c",
    "handle_subscribe.c",
    "../lib/handle_unsuback.c",
    "handle_unsubscribe.c",
    "keepalive.c",
    "logging.c",
    "loop.c",
    "../lib/memory_mosq.c",
    "memory_public.c",
    "mosquitto.c",
    "../lib/misc_mosq.c",
    "mux.c",
    "mux_epoll.c",
    "mux_poll.c",
    "net.c",
    "../lib/net_mosq_ocsp.c",
    "../lib/net_mosq.c",
    "../lib/packet_datatypes.c",
    "../lib/packet_mosq.c",
    "password_mosq.c",
    "persist_read_v234.c",
    "persist_read_v5.c",
    "persist_read.c",
    "persist_write_v5.c",
    "persist_write.c",
    "plugin.c",
    "plugin_public.c",
    "property_broker.c",
    "../lib/property_mosq.c",
    "read_handle.c",
    "retain.c",
    "security.c",
    "security_default.c",
    "../lib/send_mosq.c",
    "send_auth.c",
    "send_connack.c",
    "../lib/send_connect.c",
    "../lib/send_disconnect.c",
    "../lib/send_publish.c",
    "send_suback.c",
    "signals.c",
    "../lib/send_subscribe.c",
    "send_unsuback.c",
    "../lib/send_unsubscribe.c",
    "session_expiry.c",
    "../lib/strings_mosq.c",
    "subs.c",
    "sys_tree.c",
    "../lib/time_mosq.c",
    "../lib/tls_mosq.c",
    "topic_tok.c",
    "../lib/util_mosq.c",
    "../lib/util_topic.c",
    "../lib/utf8_mosq.c",
    "websockets.c",
    "will_delay.c",
    "../lib/will_mosq.c"
  ]

  include_dirs = [
    "//third_party/mosquitto",
    "//third_party/mosquitto/src",
    "//third_party/mosquitto/include",
    "//third_party/mosquitto/lib",
    "//third_party/mosquitto/deps",
  ]

  configs = [":mosquitto_config"]
}


ohos_executable("mosquitto") {

  deps = [
    ":mosquitto_src"
  ]

  license_file = "//third_party/mosquitto/LICENSE.txt"

  install_enable = true

  part_name = "mosquitto"
  subsystem_name = "thirdparty"
}
